--- a/css/custom.css
+++ b/css/custom.css
@@ -62,7 +62,7 @@ html, body {
   width: 15%;
   height: 100%;
   position: absolute;
-  background-color: rgb(12,238,108, .5 );
+  background-color: rgb(12,238,108, .3 );
   color: #fff;
   overflow: hidden;
   z-index: 10;
@@ -197,8 +197,18 @@ html, body {
   background: linear-gradient(217deg, rgba(4,95,43, .1), rgba(4,95,43, .3) 70.71%),
               linear-gradient(127deg, rgba(4,95,43, 1), rgba(4,95,43,0) 70.71%),
               linear-gradient(336deg, rgba(4,95,43,.4), rgba(4,95,43,0) 70.71%);
-
 }
+/*.content-wrapper:before{
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  filter:blur(4px);
+    -o-filter:blur(4px);
+    -ms-filter:blur(4px);
+    -moz-filter:blur(4px);
+    -webkit-filter:blur(4px);
+}*/
 
 /*dashboard here---------------------------------*/
 .dashboard-div {
@@ -260,7 +270,7 @@ html, body {
 }
 .content-wrap {
   height: 500px; /*set height of content-wrap*/
-  background-color: rgb(12,238,108, .5  );
+  /*background-color: rgb(12,238,108, .2  );*/
   padding-bottom: 5px;
   overflow: hidden;
 
@@ -305,8 +315,19 @@ html, body {
   height: 250px;
   position:absolute;
   overflow: hidden;
-  border-bottom: solid 1px red;
 }
+
+.btn-reports-div {
+  padding-top: 15px;
+  padding-left: 0;
+}
+
+.btn-reports-div input{
+  margin-top: 10px;
+  border: none;
+  border-radius: 0;
+}
+
 
 
 /*dashboard reports -------------------------------------*/
