--- a/css/custom.css
+++ b/css/custom.css
@@ -723,3 +723,11 @@ html, body {
 	/*border-top: solid 1px #fff; */
 	height: 70px;
 }
+
+.chk-inputDate{
+	background-color: #edf0f5;
+	width: 15%;
+    border:none;
+    border-bottom: 2px solid silver;
+    outline: none;
+}
